swagger changes for user
