# app/swagger/swagger.json
@@ -9,7 +9,7 @@
             "url": "https://opensource.org/licenses/MIT"
         }
     },
-    "basePath": "/user/api/v1/user",
+    "basePath": "/user/api/v1",
     "schemes": ["http", "https"],
     "consumes": ["application/json"],
     "produces": ["application/json"],
@@ -23,7 +23,7 @@
     },
 
     "paths": {
-        "/add_user": {
+        "/user/add_user": {
             "post": {
                 "summary": "Create new user",
                 "tags": ["User Management"],
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/verify_otp": {
+        "/user/verify_otp": {
             "post": {
                 "summary": "OTP Verification",
                 "tags": ["User Management"],
@@ -83,7 +83,7 @@
                 }
             }
         },
-        "/create_mpin": {
+        "/user/create_mpin": {
             "post": {
                 "summary": "MPIN Creation",
                 "tags": ["User Management"],
@@ -113,7 +113,7 @@
                 }
             }
         },
-        "/login": {
+        "/user/login": {
             "post": {
                 "summary": "Login",
                 "tags": ["User Management"],
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "/user_list": {
+        "/user/user_list": {
             "get": {
                 "tags": ["User Management"],
                 "security": [{ "Bearer": [] }],
@@ -158,7 +158,7 @@
                 }
             }
         },
-        "/{_id}": {
+        "/user/{_id}": {
             "get": {
                 "tags": ["Waiting Charge Management"],
                 "security": [{ "Bearer": [] }],
@@ -178,7 +178,7 @@
                 }
             }
         },
-        "/update": {
+        "/user/update": {
             "put": {
                 "tags": ["User Management"],
                 "security": [{ "Bearer": [] }],
